; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/ipv4/extr_igmp.c_ip_mc_down.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/ipv4/extr_igmp.c_ip_mc_down.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.in_device = type { i32, i64, i32, i64, %struct.ip_mc_list* }
%struct.ip_mc_list = type { %struct.ip_mc_list* }

@IGMP_ALL_HOSTS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ip_mc_down(%struct.in_device* %0) #0 {
  %2 = alloca %struct.in_device*, align 8
  %3 = alloca %struct.ip_mc_list*, align 8
  store %struct.in_device* %0, %struct.in_device** %2, align 8
  %4 = call i32 (...) @ASSERT_RTNL()
  %5 = load %struct.in_device*, %struct.in_device** %2, align 8
  %6 = getelementptr inbounds %struct.in_device, %struct.in_device* %5, i32 0, i32 4
  %7 = load %struct.ip_mc_list*, %struct.ip_mc_list** %6, align 8
  store %struct.ip_mc_list* %7, %struct.ip_mc_list** %3, align 8
  br label %8

8:                                                ; preds = %14, %1
  %9 = load %struct.ip_mc_list*, %struct.ip_mc_list** %3, align 8
  %10 = icmp ne %struct.ip_mc_list* %9, null
  br i1 %10, label %11, label %18

11:                                               ; preds = %8
  %12 = load %struct.ip_mc_list*, %struct.ip_mc_list** %3, align 8
  %13 = call i32 @igmp_group_dropped(%struct.ip_mc_list* %12)
  br label %14

14:                                               ; preds = %11
  %15 = load %struct.ip_mc_list*, %struct.ip_mc_list** %3, align 8
  %16 = getelementptr inbounds %struct.ip_mc_list, %struct.ip_mc_list* %15, i32 0, i32 0
  %17 = load %struct.ip_mc_list*, %struct.ip_mc_list** %16, align 8
  store %struct.ip_mc_list* %17, %struct.ip_mc_list** %3, align 8
  br label %8

18:                                               ; preds = %8
  %19 = load %struct.in_device*, %struct.in_device** %2, align 8
  %20 = load i32, i32* @IGMP_ALL_HOSTS, align 4
  %21 = call i32 @ip_mc_dec_group(%struct.in_device* %19, i32 %20)
  ret void
}

declare dso_local i32 @ASSERT_RTNL(...) #1

declare dso_local i32 @igmp_group_dropped(%struct.ip_mc_list*) #1

declare dso_local i32 @ip_mc_dec_group(%struct.in_device*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
